# bch_fft

./: CMakeLists.txt  LICENSE  README.md
bch/: main.c
fft/: test.c
include/: additive_fft.h  bch.h  finite_field.h  gf2_extension_polynomials.h  gf2_polynomials.h  gf2_polynomials_misc.h  multiplicative_fft.h  utils.h
libbase/: finite_field.c  gf2_extension_polynomials.c  gf2_polynomials.c  gf2_polynomials_misc.c  utils.c
libbch/: bch.c
libfft/: additive_fft.c  multiplicative_fft.c
